--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,25 +1,25 @@
-html {
-    font-family: Georgia, serif;
-}
-h1{
-    text-align: center;
-    color: red;
-    font-family: Impact, sans-serif;
-}
-h2{
-    text-align: center;
-    color: red;
-    font-family: Impact, sans-serif;
-}
+@charset "UTF-8";
+
 body {
-    text-align: center;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #333;
+    margin: 0 auto;
+    min-width: 768px;
+    max-width: 1024px;
 }
 
-img {
-    display: block;
-    margin: 0 auto; 
-    text-align: center;
+
+main {
+    display: flex;
+    flex-direction: row;
 }
-h3{
-    text-align: center;
+
+
+main section {
+    width: 70%; 
 }
+
+main aside {
+    width: 30%;
+}
+
